<resources>
    <string name="app_name">Disease-Symptom</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_disease">Disease</string>
    <string name="title_activity_symptom">Symptom</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="country">country</string>
    <string name="user_name">user_name</string>
    <string name="copyrigth">Copyright Dennis Vrynas</string>
    <string name="welcome_to_the_app">Welcome to the Disease-Symptom App</string>
    <string name="type_your_disease">Browse disease</string>
    <string name="disease">disease</string>
    <string name="register">register</string>
    <string name="back">Back</string>
    <string name="you_can_send_us_some_details_about_your_illneses">Questionaires</string>
    <string name="tx1">Chronic obstructive pulmonary disease</string>
    <string name="questionnaire1">questionnaire1</string>
    <string name="questionnaire2">Questionnaire2</string>
    <string name="questionnaire6">Questionnaire6</string>
    <string name="tx6">Coronary disease</string>
    <string name="questionnaire5">Questionnaire5</string>
    <string name="tx5">Multiple Sclerosis</string>
    <string name="questionnaire4">Questionnaire4</string>
    <string name="tx4">Blood pressure</string>
    <string name="questionnaire3">Questionnaire3</string>
    <string name="tx3">Cancer patients</string>
    <string name="tx2">Health perception</string>
    <string name="user_email">user_email</string>
    <string name="user_password">user_password</string>
    <string name="login">Login</string>
    <string name="symptom">Symptom</string>
    <string name="tx26">How much you believe that your disease affect you?</string>
    <string name="tx25">Do you believe that your treatment can help you?</string>
    <string name="tx24">Do you believe that you can control your disease?</string>
    <string name="button">send</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="tx21">How long it takes your disease</string>
    <string name="q11">send</string>
    <string name="q12">How often do you cough?</string>
    <string name="q13">Do you often feel chest tight?</string>
    <string name="q14">Do you get lighter when climbing stairs?</string>
    <string name="q15">How calm is your sleep?</string>
    <string name="q16">Do you feel atony in the day?</string>
    <string name="q17">Your scored is between 0–20</string>
    <string name="q18">Effect : Low</string>
    <string name="q19">In any case you have to visit your doctor!!!!!!</string>
    <string name="q20">Your scored is between 21–40</string>
    <string name="q21">Effect : Medium</string>
    <string name="q22">In any case you have to visit your doctor!!!!!!</string>
    <string name="q23">Your scored is over 40</string>
    <string name="q24">Effect : High</string>
    <string name="q25">In any case you have to visit your doctor!!!!!!</string>
    <string name="q61">How happy you are with the treatment</string>
    <string name="q62">Do you believe that you caused to you other diseases?</string>
    <string name="q63">What is the course of treatment</string>
    <string name="q64">How severe were the symptoms?</string>
    <string name="q60">How early did you diagnose with coronary heart disease?</string>
    <string name="q50">Your score is over 50</string>
    <string name="q51">Your score is between 30–50</string>
    <string name="q52">Your score is between 0–29</string>
    <string name="q53">How often relapse?</string>
    <string name="q54">Do you caused you other diseases?</string>
    <string name="q55">Do you wan to change your treatment with something else?</string>
    <string name="q56">How helpful is your treatment?</string>
    <string name="q57">how intense the symptoms are?</string>
    <string name="q59">When the disease detected?</string>
    <string name="q40">Your score is over 30</string>
    <string name="q41">Your score is between 16–30</string>
    <string name="q42">Your score is between 0–15</string>
    <string name="q43">Treatment has been effective ?</string>
    <string name="q44">Combination of cholesterol and smoking</string>
    <string name="q46">In which category you belong?</string>
    <string name="q33">Do your friends help you to overcome your problem ?</string>
    <string name="q32">Do you believe that you need psychological help ?</string>
    <string name="q31">Your treatment are helpful?</string>
    <string name="q35">Did it caused other diseases ?</string>
    <string name="q36">There are relatives with the same illness</string>
    <string name="q37">your disease</string>
    <string name="q49">At what age found blood pressure?</string>
    <string name="q48">Have you stopped habits that burden the situation?</string>
    <string name="register_failed">REGISTER FAILED</string>
    <string name="register_successful">REGISTER SUCCESSFUL</string>
    <string name="loading_please_wait">Loading.......please wait</string>
    <string name="type_the_disease_that_you_want">Type the disease that you want</string>
    <string name="results">Results</string>
    <string name="contact_with_us_for_further_details">Contact with us for further details</string>
    <string name="if_you_don_t_have_sign_up_yet_please_register">If you don\'t have sign up yet please register</string>
    <string name="login_to_our_app_to_get_full_access">Login to our app to get full access</string>
    <string name="new_user_name">new user name</string>
    <string name="new_user_password">new user password</string>
    <string name="new_user_country">new user country</string>
    <string name="new_user_age">new user age</string>
    <string name="change_name">change name</string>
    <string name="change_password">change password</string>
    <string name="change_country">change country</string>
    <string name="change_age">change age</string>
    <string name="profile">Profile</string>
    <string name="name_change_successful">Name change successful</string>
    <string name="password_change_successful">Password change successful</string>
    <string name="country_change_successful">Country change successful</string>
    <string name="age_change_successful">Age change successful</string>
    <string name="next">Next</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="type_your_symptoms">type your symptoms</string>
    <string name="find_it">Find it</string>
</resources>
